Updated the design resources and other resources

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2396,29 +2396,25 @@
 
             <!-- stock photos -->
             <div id="photos" class="resource-card">
-              <h3 class="resource-card-title">Stock Photos</h3>
+              <h3 class="resource-card-title">Photos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://unsplash.com/">Unsplash</a>
+                  <a target="_blank" href="https://unsplash.com/">Unsplash - Beautiful free images and photos.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
 
-            <!-- Vectors and Graphics -->
+            <!-- Illustrations -->
             <div id="graphics" class="resource-card">
               <h3 class="resource-card-title">Vectors and Graphics</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
+                  <a target="_blank" href="https://undraw.co/">Undraw - Open-source illustrations for any idea you can imagine and create.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
+                  <a target="_blank" href="https://error404.fun/">404 Illustrations - Royalty free illustrations for 404 pages</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
@@ -2429,16 +2425,8 @@
               <h3 class="resource-card-title">Others</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
-                  <span class="resource-link-badge">Free</span>
+                  <a target="_blank" href="#">Empty Link</a>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
@@ -2459,13 +2447,7 @@
 
           <ul class="resource-card-links">
             <li class="resource-link">
-              <a href="#">Link</a>
-            </li>
-            <li class="resource-link">
-              <a href="#">Link</a>
-            </li>
-            <li class="resource-link">
-              <a href="#">Link</a>
+              <a href="#">Empty Link</a>
             </li>
           </ul>
         </section>
@@ -2489,12 +2471,6 @@
                 <li class="resource-link">
                   <a target="_blank" href="#">Link</a>
                 </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
               </ul>
             </div>
 
@@ -2505,31 +2481,8 @@
                 <li class="resource-link">
                   <a target="_blank" href="#">Link</a>
                 </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
               </ul>
             </div>
-
-            <!-- documents -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Documents</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
-                </li>
-              </ul>
-            </div>
-          </div>
         </section>
 
         <!--* What next -->
