Added pattern generator link

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2425,8 +2425,8 @@
               <h3 class="resource-card-title">Others</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Empty Link</a>
-                  <span class="resource-link-badge"></span>
+                  <a target="_blank" href="https://doodad.dev/pattern-generator/">Doodad Pattern Generator</a>
+                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
