added more links to design resources

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1113,8 +1113,8 @@
               </p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"></a>
-                  <span class="resource-link-badge"></span>
+                  <a target="_blank" href="https://responsively.app/"></a>
+                  <span class="resource-link-badge">Responsively App - A dev-tool that aids faster and precise responsive web development.</span>
                 </li>
               </ul>
             </div>
@@ -2383,6 +2383,15 @@
               <h3 class="resource-card-title">Icons</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                  <a target="_blank" href="https://fonts.google.com/icons">Google Material Icons</a>
+                  <span class="resource-link-badge">Free</span>
+                  <ul class="resource-link-sublinks">
+                    <li class="resource-link">
+                      <a target="_blank" href="https://youtu.be/QBSSpw-GH2w">How to use Google Material Icons. ~ Leanne R</a>
+                    </li>
+                  </ul>
+                </li> 
+                <li class="resource-link">
                   <a target="_blank" href="https://fontawesome.com/">Font Awesome Icons</a>
                   <span class="resource-link-badge">Free</span>
                   <ul class="resource-link-sublinks">
@@ -2390,6 +2399,14 @@
                       <a target="_blank" href="https://youtu.be/nHKjsqw0zw8">How to add Fontawesone to your html. ~ KodeBase</a>
                     </li>
                   </ul>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://iconstore.co/">IconStore - Free Icons by First-Class Designers.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://www.flaticon.com/">FlatIcons - Access +6.7M vector icons & stickers.</a>
+                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
@@ -2402,11 +2419,23 @@
                   <a target="_blank" href="https://unsplash.com/">Unsplash - Beautiful free images and photos.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://www.pexels.com/">Pexels - Free stock photos, images & videos shared by creators.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://flickr.com/">Flickr - Beautiful free images and photos.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://getloaf.io/pricing/">Loaf - Animated SVG icons.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
               </ul>
             </div>
 
             <!-- Illustrations -->
-            <div id="graphics" class="resource-card">
+            <div id="illustrations" class="resource-card">
               <h3 class="resource-card-title">Vectors and Graphics</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
@@ -2414,7 +2443,67 @@
                   <span class="resource-link-badge">Free</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://error404.fun/">404 Illustrations - Royalty free illustrations for 404 pages</a>
+                  <a target="_blank" href="https://error404.fun/">404 Illustrations - Royalty free illustrations for 404 pages.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://doodad.dev/pattern-generator/">Doodad Pattern Generator.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+              </ul>
+            </div>
+
+            <!-- simplify css -->
+            <div id="simplify-css" class="resource-card">
+              <h3 class="resource-card-title">Simplify Css</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank" href="https://neumorphism.io/#e0e0e0">Neumorphism maker - Generate Soft-UI CSS code.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://animista.net/">Animista - CSS animations on demand.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://csslayout.io/">CSS Layout - Popular layouts and patterns made with CSS.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://bennettfeely.com/clippy/">Clippy - CSS clip-path maker.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href=""></a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+              </ul>
+            </div>
+
+            <!-- gradients and color schemes -->
+            <div id="gradients" class="resource-card">
+              <h3 class="resource-card-title">Gradients and Color schemes.</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank" href="https://play.google.com/store/apps/details?id=com.sorincovor.pigments">Pigments - Color scheme creator.</a>
+                  <span class="resource-link-badge">Free</span>
+                  <span class="resource-link-badge">App</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://play.google.com/store/apps/details?id=com.apps.offbeat.colorpalette">Colour Palette - Extract/Create gradients and colors.</a>
+                  <span class="resource-link-badge">Free</span>
+                  <span class="resource-link-badge">App</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://coolors.co/">Coolors - Generate or browse beautiful color combinations for your designs.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href=""></a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href=""></a>
                   <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
@@ -2425,8 +2514,8 @@
               <h3 class="resource-card-title">Others</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://doodad.dev/pattern-generator/">Doodad Pattern Generator</a>
-                  <span class="resource-link-badge">Free</span>
+                  <a target="_blank" href="">Empty link</a>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
