Added nav links to the side bar.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -318,10 +318,16 @@
                   <a href="#icons">Icons</a>
                 </li>
                 <li class="sidebar-subtitle">
-                  <a href="#photos">Stock Photos</a>
+                  <a href="#photos">Photos</a>
                 </li>
                 <li class="sidebar-subtitle">
-                  <a href="#graphics">Graphics and Vectors</a>
+                  <a href="#illustrations">Illustrations and Patterns</a>
+                </li>
+                <li class="sidebar-subtitle">
+                  <a href="#simplify-css">Simplify CSS</a>
+                </li>
+                <li class="sidebar-subtitle">
+                  <a href="#gradients">Gradients and Colors</a>
                 </li>
                 <li class="sidebar-subtitle">
                   <a href="#others">Others</a>
@@ -2370,9 +2376,6 @@
                     <li class="resource-link">
                       <a target="_blank" href="https://youtu.be/qgmLDPLApBY">Add custom fonts to your website using Google Fonts. ~ Dcode</a>
                     </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="https://youtu.be/Hwq_Mr12bcI">How to import new fonts. ~ Dani Krossing</a>
-                    </li>
                   </ul>
                 </li>
               </ul>
@@ -2408,6 +2411,10 @@
                   <a target="_blank" href="https://www.flaticon.com/">FlatIcons - Access +6.7M vector icons & stickers.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://getloaf.io/pricing/">Loaf - Animated SVG icons.</a>
+                  <span class="resource-link-badge">Free</span>
+                </li>
               </ul>
             </div>
 
@@ -2427,16 +2434,12 @@
                   <a target="_blank" href="https://flickr.com/">Flickr - Beautiful free images and photos.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://getloaf.io/pricing/">Loaf - Animated SVG icons.</a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
               </ul>
             </div>
 
-            <!-- Illustrations -->
+            <!-- illustrations -->
             <div id="illustrations" class="resource-card">
-              <h3 class="resource-card-title">Vectors and Graphics</h3>
+              <h3 class="resource-card-title">Illustrations and Patterns</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://undraw.co/">Undraw - Open-source illustrations for any idea you can imagine and create.</a>
@@ -2473,10 +2476,6 @@
                   <a target="_blank" href="https://bennettfeely.com/clippy/">Clippy - CSS clip-path maker.</a>
                   <span class="resource-link-badge">Free</span>
                 </li>
-                <li class="resource-link">
-                  <a target="_blank" href=""></a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
               </ul>
             </div>
 
@@ -2496,14 +2495,6 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://coolors.co/">Coolors - Generate or browse beautiful color combinations for your designs.</a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href=""></a>
-                  <span class="resource-link-badge">Free</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href=""></a>
                   <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
