Removed empty links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1891,8 +1891,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9jxJX7vojNVK-o8ubDZEcNb"
-                    > Complete Sass tutorial. ~ The Net Ninja
-                  >
+                    > Complete Sass tutorial. ~ The Net Ninja</a>
                   <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
@@ -1932,7 +1931,7 @@
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
+                  <a target="_blank" href="#"></a>
                   <span class="resource-link-badge"></span>
                 </li>
               </ul>
@@ -2505,7 +2504,7 @@
               <h3 class="resource-card-title">Others</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="">Empty link</a>
+                  <a target="_blank" href=""></a>
                   <span class="resource-link-badge"></span>
                 </li>
               </ul>
@@ -2527,7 +2526,7 @@
 
           <ul class="resource-card-links">
             <li class="resource-link">
-              <a href="#">Empty Link</a>
+              <a href="#"></a>
             </li>
           </ul>
         </section>
@@ -2549,7 +2548,7 @@
               <h3 class="resource-card-title">Articles</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
+                  <a target="_blank" href="#"></a>
                 </li>
               </ul>
             </div>
@@ -2559,7 +2558,7 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link</a>
+                  <a target="_blank" href="#"></a>
                 </li>
               </ul>
             </div>
