Modified choose a career links

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -190,8 +190,7 @@
                   <a
                     target="_blank"
                     href="https://blog.timonwa.com/you-dont-need-to-write-code-to-become-a-tech-sisbro"
-                    >You don't need to write code to become a tech sis or tech
-                    bro.  ~ Timonwa</a
+                    >21 no-code tech jobs you can do to become a tech sis or tech bro.  ~ Timonwa</a
                   >
                 </li>
                 <li class="resource-link">
