--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -186,9 +186,7 @@
                   target="_blank"
                   href="https://github.com/Timonwa/techroadmap"
                   >here</a
-                >. If you are a non-developer or do not know how to code but
-                still want to contribute, you can do that
-                <a class="paragraph-links" target="_blank" href="#">here</a>.
+                >. If you are a non-developer or do not want to contribute as a developer, you can do that by clicking the links below.
               </p>
               <p>
                 Do read our
@@ -215,6 +213,43 @@
                 a star, it would mean much to us.
               </p>
               <p>See you soon! 👋</p>
+      
+              <!-- contribution forms -->
+              <h2 class="heading" style="font-size: 1.2rem;">Contribution forms</h2>
+                <ol class="contribution-form-list">
+                  <li class="contribution-form">
+                    <a
+                      href="https://surveyheart.com/form/6223d70e04230d6aacb584eb"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Tech Roadmap Contribution Form (Design)</a
+                    >
+                  </li>
+                  <li class="contribution-form">
+                    <a
+                      href="https://surveyheart.com/form/6223dce98b49886ad8cd58e5"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Tech Roadmap Contribution Form (Roadmaps/Guides)</a
+                    >
+                  </li>
+                  <li class="contribution-form">
+                    <a
+                      href="https://surveyheart.com/form/62246725b4851c6aa5a1d3af"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Tech Roadmap Contribution Form (Frontend Resource Links)</a
+                    >
+                  </li>
+                  <li class="contribution-form">
+                    <a
+                      href="https://surveyheart.com/form/62246ceb8b49886ad8d0b120"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Tech Roadmap Contribution Form (Others)</a
+                    >
+                  </li>
+                </ol>
             </div>
           </div>
         </section>
