--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -186,7 +186,7 @@
                   target="_blank"
                   href="https://github.com/Timonwa/techroadmap"
                   >here</a
-                >. If you are a non-developer or do not want to contribute as a developer, you can do that by clicking the links below.
+                >. If you are a non-developer or do not want to contribute as a developer, you can do that by clicking on the links to one of our contribution forms below.
               </p>
               <p>
                 Do read our
