fixed bug in html and css beginners others list.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1119,8 +1119,8 @@
               </p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://responsively.app/"></a>
-                  <span class="resource-link-badge">Responsively App - A dev-tool that aids faster and precise responsive web development.</span>
+                  <a target="_blank" href="https://responsively.app/">Responsively App - A dev-tool that aids faster and precise responsive web development.</a>
+                  <span class="resource-link-badge">Tool</span>
                 </li>
               </ul>
             </div>
