added gitlab nav link to the side bar of frontend page.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -215,6 +215,9 @@
                   <a href="#git-desktop">Git Desktop</a>
                 </li>
                 <li class="sidebar-subtitle">
+                  <a href="#gitlab">GitLab</a>
+                </li>
+                <li class="sidebar-subtitle">
                   <a href="#bitbucket">BitBucket</a>
                 </li>
               </ul>
