fixed gitlab nav link not working

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1231,7 +1231,7 @@
             </div>
 
             <!--* Git lab -->
-            <div id="bitbucket" class="resource-card">
+            <div id="gitlab" class="resource-card">
               <h3 class="resource-card-title">GitLab</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
