added social links to the footer.

--- a/src/index.html
+++ b/src/index.html
@@ -294,9 +294,7 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a
-                class="paragraph-links footer"
-                href="./index.html"
+              <a class="paragraph-links footer" href="./index.html"
                 >Tech Roadmap</a
               >
               is created by
@@ -307,6 +305,33 @@
                 >Timonwa</a
               >
             </p>
+          </div>
+
+          <!-- social links -->
+          <div class="sections">
+            <ul class="social-links">
+              <li>
+                <a
+                  class="social-link para-link"
+                  target="_blank"
+                  href="mailto:techcareerroadmap@gmail.com"
+                >
+                  <img src="./assets/icons/gmail.png" alt="gmail icon" />
+                </a>
+              </li>
+              <li>
+                <a
+                  class="social-link para-link"
+                  target="_blank"
+                  href="https://twitter.com/techroadmap_"
+                >
+                  <img
+                    src="./assets/icons/twitter.png"
+                    alt="twitter icon"
+                  />
+                </a>
+              </li>
+            </ul>
           </div>
 
           <!-- website quote -->
