--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -347,6 +347,33 @@
             </p>
           </div>
 
+          <!-- social links -->
+          <div class="sections">
+            <ul class="social-links">
+              <li>
+                <a
+                  class="social-link para-link"
+                  target="_blank"
+                  href="mailto:techcareerroadmap@gmail.com"
+                >
+                  <img src="../assets/icons/gmail.png" alt="gmail icon" />
+                </a>
+              </li>
+              <li>
+                <a
+                  class="social-link para-link"
+                  target="_blank"
+                  href="https://twitter.com/techroadmap_"
+                >
+                  <img
+                    src="../assets/icons/twitter.png"
+                    alt="twitter icon"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+
           <!-- website quote -->
           <div class="sections quote">
             <p>
