added database of careers list and fed it to homepage.

--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -62,25 +62,13 @@
     <!--* CSS (resets) -->
     <!-- Normalize.css -->
     <!-- This comes first -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../css/css-resets/normalise.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/normalise.css" />
     <!-- My CSS reset -->
     <!-- This comes second -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../css/css-resets/my-css-reset.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/my-css-reset.css" />
     <!-- My Font reset -->
     <!-- This comes third -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../css/css-resets/my-font-reset.css"
-    />
+    <link rel="stylesheet" href="../css/css-resets/my-font-reset.css" />
 
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
@@ -186,7 +174,9 @@
                   target="_blank"
                   href="https://github.com/Timonwa/techroadmap"
                   >here</a
-                >. If you are a non-developer or do not want to contribute as a developer, you can do that by clicking on the links to one of our contribution forms below.
+                >. If you are a non-developer or do not want to contribute as a
+                developer, you can do that by clicking on the links to one of
+                our contribution forms below.
               </p>
               <p>
                 Do read our
@@ -213,43 +203,45 @@
                 a star, it would mean much to us.
               </p>
               <p>See you soon! 👋</p>
-      
+
               <!-- contribution forms -->
-              <h2 class="heading" style="font-size: 1.2rem;">Contribution forms</h2>
-                <ol class="contribution-form-list">
-                  <li class="contribution-form">
-                    <a
-                      href="https://surveyheart.com/form/6223d70e04230d6aacb584eb"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >Tech Roadmap Contribution Form (Design)</a
-                    >
-                  </li>
-                  <li class="contribution-form">
-                    <a
-                      href="https://surveyheart.com/form/6223dce98b49886ad8cd58e5"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >Tech Roadmap Contribution Form (Roadmaps/Guides)</a
-                    >
-                  </li>
-                  <li class="contribution-form">
-                    <a
-                      href="https://surveyheart.com/form/62246725b4851c6aa5a1d3af"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >Tech Roadmap Contribution Form (Frontend Resource Links)</a
-                    >
-                  </li>
-                  <li class="contribution-form">
-                    <a
-                      href="https://surveyheart.com/form/62246ceb8b49886ad8d0b120"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >Tech Roadmap Contribution Form (Others)</a
-                    >
-                  </li>
-                </ol>
+              <h2 class="heading" style="font-size: 1.2rem">
+                Contribution forms
+              </h2>
+              <ol class="contribution-form-list">
+                <li class="contribution-form">
+                  <a
+                    href="https://surveyheart.com/form/6223d70e04230d6aacb584eb"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Tech Roadmap Contribution Form (Design)</a
+                  >
+                </li>
+                <li class="contribution-form">
+                  <a
+                    href="https://surveyheart.com/form/6223dce98b49886ad8cd58e5"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Tech Roadmap Contribution Form (Roadmaps/Guides)</a
+                  >
+                </li>
+                <li class="contribution-form">
+                  <a
+                    href="https://surveyheart.com/form/62246725b4851c6aa5a1d3af"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Tech Roadmap Contribution Form (Frontend Resource Links)</a
+                  >
+                </li>
+                <li class="contribution-form">
+                  <a
+                    href="https://surveyheart.com/form/62246ceb8b49886ad8d0b120"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Tech Roadmap Contribution Form (Others)</a
+                  >
+                </li>
+              </ol>
             </div>
           </div>
         </section>
@@ -361,10 +353,7 @@
                   target="_blank"
                   href="https://twitter.com/techroadmap_"
                 >
-                  <img
-                    src="../assets/icons/twitter.png"
-                    alt="twitter icon"
-                  />
+                  <img src="../assets/icons/twitter.png" alt="twitter icon" />
                 </a>
               </li>
             </ul>
