--- a/src/index.html
+++ b/src/index.html
@@ -53,25 +53,13 @@
     <!--* CSS (resets) -->
     <!-- Normalize.css -->
     <!-- This comes first -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/css-resets/normalise.css"
-    />
+    <link rel="stylesheet" href="./css/css-resets/normalise.css" />
     <!-- My CSS reset -->
     <!-- This comes second -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/css-resets/my-css-reset.css"
-    />
+    <link rel="stylesheet" href="./css/css-resets/my-css-reset.css" />
     <!-- My Font reset -->
     <!-- This comes third -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./css/css-resets/my-font-reset.css"
-    />
+    <link rel="stylesheet" href="./css/css-resets/my-font-reset.css" />
 
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
@@ -173,67 +161,7 @@
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
 
-          <div class="careers__cards">
-            <!-- frontend card -->
-            <a
-              href="./html/careers/frontend.html"
-              class="careers__card-link pink"
-            >
-              <div class="careers__card">
-                <h3>Frontend</h3>
-                <p>
-                  Curated guide and resources to becoming a frontend developer.
-                </p>
-              </div>
-            </a>
-            <!-- backend card -->
-            <a href="#" class="careers__card-link green disabled">
-              <p class="coming-soon"><span>Coming Soon</span></p>
-              <div class="careers__card">
-                <h3>Backend</h3>
-                <p>
-                  Curated guide and resources to becoming a backend developer.
-                </p>
-              </div>
-            </a>
-            <!-- android/mobile card -->
-            <a href="#" class="careers__card-link red disabled">
-              <p class="coming-soon"><span>Coming Soon</span></p>
-              <div class="careers__card">
-                <h3>Android/Mobile</h3>
-                <p>
-                  Curated guide and resources to becoming an android/mobile
-                  developer.
-                </p>
-              </div>
-            </a>
-            <!-- uiux card  -->
-            <a href="#" class="careers__card-link orange disabled">
-              <p class="coming-soon"><span>Coming Soon</span></p>
-              <div class="careers__card">
-                <h3>Ui/Ux Designer</h3>
-                <p>Curated guide and resources to becoming a Ui/Ux designer.</p>
-              </div>
-            </a>
-            <!-- data analyst card -->
-            <a href="#" class="careers__card-link purple disabled">
-              <p class="coming-soon"><span>Coming Soon</span></p>
-              <div class="careers__card">
-                <h3>Data Analyst</h3>
-                <p>Curated guide and resources to becoming a data analyst.</p>
-              </div>
-            </a>
-            <!-- product management card -->
-            <a href="#" class="careers__card-link grey disabled">
-              <p class="coming-soon"><span>Coming Soon</span></p>
-              <div class="careers__card">
-                <h3>Technical Writing</h3>
-                <p>
-                  Curated guide and resources to becoming a product manager.
-                </p>
-              </div>
-            </a>
-          </div>
+          <div class="careers__cards"></div>
         </section>
       </main>
 
@@ -325,10 +253,7 @@
                   target="_blank"
                   href="https://twitter.com/techroadmap_"
                 >
-                  <img
-                    src="./assets/icons/twitter.png"
-                    alt="twitter icon"
-                  />
+                  <img src="./assets/icons/twitter.png" alt="twitter icon" />
                 </a>
               </li>
             </ul>
@@ -354,5 +279,8 @@
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
     <script src="./js/script.js"></script>
+
+    <!-- Modules -->
+    <script type="module" src="./js/homepage.js"></script>
   </body>
 </html>
