fixed icons in footer not showing.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2678,7 +2678,7 @@
                   target="_blank"
                   href="mailto:techcareerroadmap@gmail.com"
                 >
-                  <img src="../assets/icons/gmail.png" alt="gmail icon" />
+                  <img src="../../assets/icons/gmail.png" alt="gmail icon" />
                 </a>
               </li>
               <li>
@@ -2688,7 +2688,7 @@
                   href="https://twitter.com/techroadmap_"
                 >
                   <img
-                    src="../assets/icons/twitter.png"
+                    src="../../assets/icons/twitter.png"
                     alt="twitter icon"
                   />
                 </a>
