removed text/css type.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -79,10 +79,10 @@
     <!--* Css (My codes) -->
     <!-- My Css Variables -->
     <!-- This comes first -->
-    <link rel="stylesheet" type="text/Css" href="../../css/variables.css" />
+    <link rel="stylesheet" href="../../css/variables.css" />
     <!-- main Css styles -->
     <!-- This comes second -->
-    <link rel="stylesheet" type="text/Css" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/main.css" />
   </head>
 
   <body>
