--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,10 @@
     <!--* CSS (My codes) -->
     <!-- My CSS Variables -->
     <!-- This comes first -->
-    <link rel="stylesheet" type="text/css" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/variables.css" />
     <!-- main CSS styles -->
     <!-- This comes second -->
-    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
