--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -249,16 +249,7 @@
         <!-- * contributors section -->
         <section class="contributors">
           <h2 class="heading">Meet our MVPs</h2>
-          <ol class="mvp-list">
-            <li class="mvp">
-              <a
-                href="http://timonwa.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Timonwa (FE Dev and Tech Writer)</a
-              >
-            </li>
-          </ol>
+          <ol class="mvp-list"></ol>
         </section>
       </main>
 
@@ -379,5 +370,8 @@
     <!--* My Javascript codes -->
     <!-- Main Javascript code -->
     <script src="../js/script.js"></script>
+
+    <!-- Modules -->
+    <script type="module" src="../js/contributePage.js"></script>
   </body>
 </html>
