links added as applicable

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1009,6 +1009,22 @@
                   complete course tutorial. ~ Leela Web Dev</a>
                 <span class="resource-link-badge">Video</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://git-scm.com/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://git-scm.com/downloads">
+                  Download here
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://git-scm.com/book/en/v2">
+                  Documentation
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
             </ul>
           </div>
 
@@ -1061,6 +1077,24 @@
                   documentation</a>
                 <span class="resource-link-badge">Article</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://github.com/">
+                  Website
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://desktop.github.com/">
+                  Download here
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://docs.github.com/en">
+                  Documentation
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
             </ul>
           </div>
 
@@ -1073,6 +1107,18 @@
                   GitLab tutorial. ~ GitSchoolDude</a>
                 <span class="resource-link-badge">Video</span>
               </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://about.gitlab.com/">
+                  Website
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://docs.gitlab.com/">
+                  Documentation
+                </a>
+                <span class="resource-link-badge">Link</span>
+              </li>
             </ul>
           </div>
 
@@ -1081,9 +1127,9 @@
             <h3 class="resource-card-title">BitBucket</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank" href="#"></a>
-              </li>
-              <span class="resource-link-badge"></span>
+                <a target="_blank" href="https://bitbucket.org/">Website</a>
+                <span class="resource-link-badge">Link</span>
+              </li> 
             </ul>
           </div>
         </div>
