Add relevant links on tools, tricks to the sections in the frontend development page.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -845,6 +845,18 @@
             </ul>
           </div>
 
+          <!-- Forum -->
+          <div class="resource-card">
+          <h3 class="resource-card-title">Forum</h3>
+          <ul class="resource-card-links">
+            <li class="resource-link">
+              <a target="_blank"
+                href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
+                <span class="resource-link-badge">Forum</span>
+            </li>
+          </ul>
+        </div>
+
           <!-- others -->
           <div class="resource-card">
             <h3 class="resource-card-title">Others</h3>
@@ -957,6 +969,18 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtu.be/vNc2s-ic1cc">6 handy Css animation projects. ~ Envato
                   Tuts+</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Forum -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Forum</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank"
+                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
+                  <span class="resource-link-badge">Forum</span>
               </li>
             </ul>
           </div>
@@ -1300,6 +1324,18 @@
             </ul>
           </div>
 
+          <!-- Forum -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Forum</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank"
+                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
+                  <span class="resource-link-badge">Forum</span>
+              </li>
+            </ul>
+          </div>
+
           <!-- others -->
           <div class="resource-card">
             <h3 class="resource-card-title">Others</h3>
@@ -1397,6 +1433,19 @@
               <li class="resource-link">
                 <a target="_blank" href="https://youtube.com/playlist?list=PLpwngcHZlPadhRwryAXw3mJWX5KH3T5L3">Basic and
                   advanced JavaScript Projects. ~ Coding Nepal</a>
+              </li>
+            </ul>
+          </div>
+
+
+          <!-- Forum -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Forum</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank"
+                  href="https://stackoverflow.com/">Stack Overflow - where developer learn share and build</a>
+                  <span class="resource-link-badge">Forum</span>
               </li>
             </ul>
           </div>
@@ -1772,6 +1821,18 @@
             <ul class="resource-card-links">
               <li class="resource-link">
                 <a target="_blank" href="#"></a>
+              </li>
+            </ul>
+          </div>
+
+
+          <!-- Dev Tools -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Dev Tools</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://www.postman.com/">Postman API - an API platform for building and using APIs </a>
+                <span class="resource-link-badge">Link</span>
               </li>
             </ul>
           </div>
